[gd_scene load_steps=31 format=3 uid="uid://die1k42jfmahn"]

[ext_resource type="Script" uid="uid://dfi0gclyc5igs" path="res://gamedata/scene/main_menu/main_menu.gd" id="1_ab7jh"]
[ext_resource type="Texture2D" uid="uid://bdbcrxa2815rn" path="res://gui/backgrounds/main_menu.jpeg" id="1_tludv"]
[ext_resource type="PackedScene" uid="uid://cvwwyafne3ryg" path="res://gamedata/scene/level_1/level_1.tscn" id="2_jx0ix"]
[ext_resource type="PackedScene" uid="uid://5somsbnrlalg" path="res://gamedata/gui/star/star.tscn" id="2_ndcgm"]
[ext_resource type="Texture2D" uid="uid://ugr5rw8wsgu" path="res://gui/backgrounds/ui_border.png" id="3_m4171"]
[ext_resource type="PackedScene" uid="uid://dtaq5avc8r7f" path="res://gamedata/scene/level_2/level_2.tscn" id="3_rp26q"]
[ext_resource type="PackedScene" uid="uid://jntda0nfq0ml" path="res://gamedata/scene/level_3/level_3.tscn" id="4_dkdrw"]
[ext_resource type="Texture2D" uid="uid://b5ya13e41k2kt" path="res://gui/buttons/text_default.svg" id="5_c58i8"]
[ext_resource type="Texture2D" uid="uid://dsh51r6drxmtr" path="res://gui/buttons/text_hover.svg" id="6_si5nj"]
[ext_resource type="Script" uid="uid://bc6bgbd55qvb3" path="res://gamedata/gui/texture_button/texture_button.gd" id="7_bejr1"]
[ext_resource type="Texture2D" uid="uid://csq5bonl77fkh" path="res://gui/buttons/text_disabled.svg" id="7_tvwr8"]
[ext_resource type="FontFile" uid="uid://car2t5itecnhr" path="res://gui/fonts/Bungee-Regular.ttf" id="9_d8en2"]
[ext_resource type="Texture2D" uid="uid://dy2ndup68fcj0" path="res://gui/buttons/arrow_left_default.svg" id="10_pcypl"]
[ext_resource type="Theme" uid="uid://dowtsey5pyxwl" path="res://gui/themes/text.tres" id="10_r20pc"]
[ext_resource type="Texture2D" uid="uid://bndqygcma1us1" path="res://gui/buttons/level_default.svg" id="10_xgh0e"]
[ext_resource type="Texture2D" uid="uid://eoofx4ysy5gn" path="res://gui/buttons/level_hover.svg" id="11_bbs4v"]
[ext_resource type="Texture2D" uid="uid://d3p11abw8yorb" path="res://gui/buttons/arrow_left_hover.svg" id="11_jr0j5"]
[ext_resource type="Texture2D" uid="uid://boeurit6h0hsl" path="res://gui/buttons/level_disabled.svg" id="11_n28j3"]
[ext_resource type="Theme" uid="uid://b1dojytjydmpw" path="res://gui/themes/value.tres" id="15_gncvb"]
[ext_resource type="Texture2D" uid="uid://bi3kg1fix3bcw" path="res://gui/backgrounds/ui_back.svg" id="16_npgut"]
[ext_resource type="Script" uid="uid://b7ccti8loiw73" path="res://gamedata/scene/main_menu/level_button.gd" id="17_jx0ix"]
[ext_resource type="FontFile" uid="uid://5wohy1go68x5" path="res://gui/fonts/Tribal Garamond.ttf" id="19_mmsxt"]

[sub_resource type="Theme" id="Theme_ks3a0"]
Label/colors/font_color = Color(0.784314, 0.572549, 0.372549, 1)
Label/colors/font_shadow_color = Color(0.427451, 0.392157, 0.298039, 1)
Label/constants/outline_size = 5
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 4
Label/constants/shadow_outline_size = 3
Label/fonts/font = ExtResource("9_d8en2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cqt0x"]
texture = ExtResource("3_m4171")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_jxuai"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_cqt0x")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_23fp8"]
texture = ExtResource("16_npgut")
texture_margin_left = 28.0
texture_margin_top = 28.0
texture_margin_right = 28.0
texture_margin_bottom = 28.0
expand_margin_top = 28.0

[sub_resource type="Theme" id="Theme_qx40b"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_23fp8")

[sub_resource type="Animation" id="Animation_dy4fm"]
resource_name = "Popup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explorer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(490, 748), Vector2(490, 192)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explorer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameName:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(0, -128), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameName:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3n44e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explorer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameName:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameName:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explorer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(490, 192)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0qjj4"]
_data = {
&"Popup": SubResource("Animation_dy4fm"),
&"RESET": SubResource("Animation_3n44e")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ab7jh")
level_1 = ExtResource("2_jx0ix")
level_2 = ExtResource("3_rp26q")
level_3 = ExtResource("4_dkdrw")
star_scene = ExtResource("2_ndcgm")

[node name="Background" type="TextureRect" parent="."]
offset_right = 2560.0
offset_bottom = 1462.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_tludv")

[node name="GameName" type="Label" parent="."]
offset_right = 1280.0
offset_bottom = 180.0
pivot_offset = Vector2(640, 0)
theme = SubResource("Theme_ks3a0")
theme_override_font_sizes/font_size = 136
text = "HOLY OAK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Explorer" type="PanelContainer" parent="."]
texture_filter = 1
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 490.0
offset_top = 192.0
offset_right = 790.0
offset_bottom = 702.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(150, 255)
theme = SubResource("Theme_jxuai")

[node name="VBoxContainer" type="VBoxContainer" parent="Explorer"]
texture_filter = 2
layout_mode = 2
size_flags_vertical = 4

[node name="Play Button" type="TextureButton" parent="Explorer/VBoxContainer"]
editor_description = "Make the scene local for another one to change the text"
custom_minimum_size = Vector2(270, 118)
layout_mode = 2
texture_normal = ExtResource("5_c58i8")
texture_pressed = ExtResource("5_c58i8")
texture_hover = ExtResource("6_si5nj")
texture_disabled = ExtResource("7_tvwr8")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("7_bejr1")

[node name="Label" type="Label" parent="Explorer/VBoxContainer/Play Button"]
layout_mode = 0
offset_top = 3.0
offset_right = 270.0
offset_bottom = 101.0
theme = ExtResource("10_r20pc")
theme_override_font_sizes/font_size = 42
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits Button" type="TextureButton" parent="Explorer/VBoxContainer"]
editor_description = "Make the scene local for another one to change the text"
custom_minimum_size = Vector2(270, 118)
layout_mode = 2
texture_normal = ExtResource("5_c58i8")
texture_pressed = ExtResource("5_c58i8")
texture_hover = ExtResource("6_si5nj")
texture_disabled = ExtResource("7_tvwr8")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("7_bejr1")

[node name="Label" type="Label" parent="Explorer/VBoxContainer/Credits Button"]
layout_mode = 0
offset_top = 3.0
offset_right = 270.0
offset_bottom = 101.0
theme = ExtResource("10_r20pc")
theme_override_font_sizes/font_size = 42
text = "CREDITS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings Button" type="TextureButton" parent="Explorer/VBoxContainer"]
editor_description = "Make the scene local for another one to change the text"
custom_minimum_size = Vector2(270, 118)
layout_mode = 2
texture_normal = ExtResource("5_c58i8")
texture_pressed = ExtResource("5_c58i8")
texture_hover = ExtResource("6_si5nj")
texture_disabled = ExtResource("7_tvwr8")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("7_bejr1")

[node name="Label" type="Label" parent="Explorer/VBoxContainer/Settings Button"]
layout_mode = 0
offset_top = 3.0
offset_right = 270.0
offset_bottom = 101.0
theme = ExtResource("10_r20pc")
theme_override_font_sizes/font_size = 42
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit Button" type="TextureButton" parent="Explorer/VBoxContainer"]
editor_description = "Make the scene local for another one to change the text"
custom_minimum_size = Vector2(270, 118)
layout_mode = 2
texture_normal = ExtResource("5_c58i8")
texture_pressed = ExtResource("5_c58i8")
texture_hover = ExtResource("6_si5nj")
texture_disabled = ExtResource("7_tvwr8")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("7_bejr1")

[node name="Label" type="Label" parent="Explorer/VBoxContainer/Exit Button"]
layout_mode = 0
offset_top = 3.0
offset_right = 270.0
offset_bottom = 101.0
theme = ExtResource("10_r20pc")
theme_override_font_sizes/font_size = 42
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Levels" type="Control" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 447.0
offset_top = 245.0
offset_right = 833.0
offset_bottom = 545.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(193, 150)
localize_numeral_system = false

[node name="GridContainer" type="GridContainer" parent="Levels"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Level 1" type="TextureButton" parent="Levels/GridContainer"]
custom_minimum_size = Vector2(126, 148)
layout_mode = 2
texture_normal = ExtResource("10_xgh0e")
texture_pressed = ExtResource("10_xgh0e")
texture_hover = ExtResource("11_bbs4v")
texture_disabled = ExtResource("11_n28j3")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("17_jx0ix")
level_technical_name = &"LEVEL_1"

[node name="Label" type="Label" parent="Levels/GridContainer/Level 1"]
layout_mode = 0
offset_right = 124.0
offset_bottom = 104.0
theme = ExtResource("15_gncvb")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Star" parent="Levels/GridContainer/Level 1" instance=ExtResource("2_ndcgm")]
custom_minimum_size = Vector2(27, 27)
layout_mode = 0
offset_left = 17.0
offset_top = 104.0
offset_right = 46.0
offset_bottom = 133.0

[node name="Star2" parent="Levels/GridContainer/Level 1" instance=ExtResource("2_ndcgm")]
custom_minimum_size = Vector2(27, 27)
layout_mode = 0
offset_left = 49.0
offset_top = 104.286
offset_right = 78.0
offset_bottom = 133.286

[node name="Star3" parent="Levels/GridContainer/Level 1" instance=ExtResource("2_ndcgm")]
custom_minimum_size = Vector2(27, 27)
layout_mode = 0
offset_left = 81.0
offset_top = 104.286
offset_right = 110.0
offset_bottom = 133.286

[node name="Level 2" type="TextureButton" parent="Levels/GridContainer"]
custom_minimum_size = Vector2(126, 148)
layout_mode = 2
disabled = true
texture_normal = ExtResource("10_xgh0e")
texture_pressed = ExtResource("10_xgh0e")
texture_hover = ExtResource("11_bbs4v")
texture_disabled = ExtResource("11_n28j3")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("17_jx0ix")
level_technical_name = &"LEVEL_2"

[node name="Label" type="Label" parent="Levels/GridContainer/Level 2"]
visible = false
layout_mode = 0
offset_right = 124.0
offset_bottom = 104.0
theme = ExtResource("15_gncvb")
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level 3" type="TextureButton" parent="Levels/GridContainer"]
custom_minimum_size = Vector2(126, 148)
layout_mode = 2
disabled = true
texture_normal = ExtResource("10_xgh0e")
texture_pressed = ExtResource("10_xgh0e")
texture_hover = ExtResource("11_bbs4v")
texture_disabled = ExtResource("11_n28j3")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("17_jx0ix")
level_technical_name = &"LEVEL_3"

[node name="Label" type="Label" parent="Levels/GridContainer/Level 3"]
visible = false
layout_mode = 0
offset_right = 124.0
offset_bottom = 104.0
theme = ExtResource("15_gncvb")
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level 4" type="TextureButton" parent="Levels/GridContainer"]
custom_minimum_size = Vector2(126, 148)
layout_mode = 2
disabled = true
texture_normal = ExtResource("10_xgh0e")
texture_pressed = ExtResource("10_xgh0e")
texture_hover = ExtResource("11_bbs4v")
texture_disabled = ExtResource("11_n28j3")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("17_jx0ix")
level_technical_name = &"LEVEL_4"

[node name="Label" type="Label" parent="Levels/GridContainer/Level 4"]
visible = false
layout_mode = 0
offset_right = 124.0
offset_bottom = 104.0
theme = ExtResource("15_gncvb")
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level 5" type="TextureButton" parent="Levels/GridContainer"]
custom_minimum_size = Vector2(126, 148)
layout_mode = 2
disabled = true
texture_normal = ExtResource("10_xgh0e")
texture_pressed = ExtResource("10_xgh0e")
texture_hover = ExtResource("11_bbs4v")
texture_disabled = ExtResource("11_n28j3")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("17_jx0ix")
level_technical_name = &"LEVEL_5"

[node name="Label" type="Label" parent="Levels/GridContainer/Level 5"]
visible = false
layout_mode = 0
offset_right = 124.0
offset_bottom = 104.0
theme = ExtResource("15_gncvb")
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level 6" type="TextureButton" parent="Levels/GridContainer"]
custom_minimum_size = Vector2(126, 148)
layout_mode = 2
disabled = true
texture_normal = ExtResource("10_xgh0e")
texture_pressed = ExtResource("10_xgh0e")
texture_hover = ExtResource("11_bbs4v")
texture_disabled = ExtResource("11_n28j3")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("17_jx0ix")
level_technical_name = &"LEVEL_6"

[node name="Label" type="Label" parent="Levels/GridContainer/Level 6"]
visible = false
layout_mode = 0
offset_right = 124.0
offset_bottom = 104.0
theme = ExtResource("15_gncvb")
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back Button" type="TextureButton" parent="Levels"]
layout_mode = 0
offset_left = -1.28573
offset_top = -71.4286
offset_right = 55.7143
offset_bottom = -14.4286
texture_normal = ExtResource("10_pcypl")
texture_pressed = ExtResource("10_pcypl")
texture_hover = ExtResource("11_jr0j5")
ignore_texture_size = true
stretch_mode = 0

[node name="Credits" type="Control" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_left = 208.0
offset_top = 168.0
offset_right = 1072.0
offset_bottom = 752.0
pivot_offset = Vector2(432, 292)

[node name="PanelContainer" type="PanelContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -256.0
offset_right = 424.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(424, 278)
theme = SubResource("Theme_qx40b")

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="Head" type="Label" parent="Credits/PanelContainer/VBoxContainer"]
texture_filter = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("19_mmsxt")
theme_override_font_sizes/font_size = 42
text = "Thanks a lot for"
horizontal_alignment = 1

[node name="MainText" type="Label" parent="Credits/PanelContainer/VBoxContainer"]
texture_filter = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("19_mmsxt")
theme_override_font_sizes/font_size = 20
text = "• Wizzard Sprites by orcmurb

• Shikashi's Fantasy Icon Pack (FREE) by Matt Firth (shikashipx) and game-icons.net
Licensed under Creative Commons BY Attribution 4.0 License
https://creativecommons.org/licenses/by/4.0/

• Traveler by Alexander Nakarada
• Leaving for Valhalla by Alexander Nakarada 
• Adventure Beyond by Alexander Nakarada
(www.creatorchords.com)
Licensed under Creative Commons BY Attribution 4.0 License
https://creativecommons.org/licenses/by/4.0/"
horizontal_alignment = 1

[node name="Back Button" type="TextureButton" parent="Credits"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.553
anchor_top = -0.51
anchor_right = -0.553
anchor_bottom = -0.51
offset_left = 1253.79
offset_top = 337.84
offset_right = 1303.79
offset_bottom = 387.84
texture_normal = ExtResource("10_pcypl")
texture_pressed = ExtResource("10_pcypl")
texture_hover = ExtResource("11_jr0j5")
ignore_texture_size = true
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0qjj4")
}
autoplay = "Popup"

[connection signal="mouse_entered" from="Explorer/VBoxContainer/Play Button" to="Explorer/VBoxContainer/Play Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Explorer/VBoxContainer/Play Button" to="Explorer/VBoxContainer/Play Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Explorer/VBoxContainer/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="Explorer/VBoxContainer/Credits Button" to="Explorer/VBoxContainer/Credits Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Explorer/VBoxContainer/Credits Button" to="Explorer/VBoxContainer/Credits Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Explorer/VBoxContainer/Credits Button" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="Explorer/VBoxContainer/Settings Button" to="Explorer/VBoxContainer/Settings Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Explorer/VBoxContainer/Settings Button" to="Explorer/VBoxContainer/Settings Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Explorer/VBoxContainer/Settings Button" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="Explorer/VBoxContainer/Exit Button" to="Explorer/VBoxContainer/Exit Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Explorer/VBoxContainer/Exit Button" to="Explorer/VBoxContainer/Exit Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Explorer/VBoxContainer/Exit Button" to="." method="_on_exit_button_pressed"]
[connection signal="mouse_entered" from="Levels/GridContainer/Level 1" to="Levels/GridContainer/Level 1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Levels/GridContainer/Level 1" to="Levels/GridContainer/Level 1" method="_on_mouse_exited"]
[connection signal="pressed" from="Levels/GridContainer/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="mouse_entered" from="Levels/GridContainer/Level 2" to="Levels/GridContainer/Level 2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Levels/GridContainer/Level 2" to="Levels/GridContainer/Level 2" method="_on_mouse_exited"]
[connection signal="pressed" from="Levels/GridContainer/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="mouse_entered" from="Levels/GridContainer/Level 3" to="Levels/GridContainer/Level 3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Levels/GridContainer/Level 3" to="Levels/GridContainer/Level 3" method="_on_mouse_exited"]
[connection signal="pressed" from="Levels/GridContainer/Level 3" to="." method="_on_level_3_pressed"]
[connection signal="mouse_entered" from="Levels/GridContainer/Level 4" to="Levels/GridContainer/Level 4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Levels/GridContainer/Level 4" to="Levels/GridContainer/Level 4" method="_on_mouse_exited"]
[connection signal="pressed" from="Levels/GridContainer/Level 4" to="." method="_on_level_4_pressed"]
[connection signal="mouse_entered" from="Levels/GridContainer/Level 5" to="Levels/GridContainer/Level 5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Levels/GridContainer/Level 5" to="Levels/GridContainer/Level 5" method="_on_mouse_exited"]
[connection signal="pressed" from="Levels/GridContainer/Level 5" to="." method="_on_level_5_pressed"]
[connection signal="mouse_entered" from="Levels/GridContainer/Level 6" to="Levels/GridContainer/Level 6" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Levels/GridContainer/Level 6" to="Levels/GridContainer/Level 6" method="_on_mouse_exited"]
[connection signal="pressed" from="Levels/GridContainer/Level 6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="Levels/Back Button" to="." method="_on_levels_back_button_pressed"]
[connection signal="pressed" from="Credits/Back Button" to="." method="_on_credits_back_button_pressed"]
